# BlloseAgent

./: .gitignore  README.md  package-lock.json
.claude/: settings.local.json
.next/: trace  trace-build
backend/: .env.example  Makefile  pyproject.toml  requirements.txt
backend/.team/: config.json
backend/.team/inbox/: bllose.jsonl
backend/bllose_agent/: main.py
backend/bllose_agent/agent/: base_agent.py  graph.py  nodes.py  self_agent.py  teammate.py
backend/bllose_agent/agent/intent/: graph.py  nodes.py
backend/bllose_agent/api/: agent.py  chat.py  intent.py  router.py
backend/bllose_agent/config/: settings.py
backend/bllose_agent/example/: s16_team_protocols.py
backend/bllose_agent/models/: response.py
backend/bllose_agent/services/: agent_service.py  team_manager.py  token_tracker.py
backend/bllose_agent/tools/: base.py
backend/scripts/: start.sh
backend/src/: main.py
backend/src/BlloseAgent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/agent/: graph.py  nodes.py  state.py
backend/src/agent/intent/: graph.py  nodes.py  state.py
backend/src/api/: agent.py  chat.py  intent.py  router.py
backend/src/chains/: llm_chain.py
backend/src/config/: settings.py
backend/src/services/: agent_service.py
backend/src/tools/: base.py
backend/tests/: test_chat.py  test_health.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/context/: ChatContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  auth.ts
(+11 files in other folders)
